--- a/views/canvas.ejs
+++ b/views/canvas.ejs
@@ -16,83 +16,108 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
     <script src="http://172.31.147.7:3000/socket.io/socket.io.js"></script>
     <script type="text/javascript">
-       $(document).ready(function(){
+        $(document).ready(function () {
 
-            var socket = io.connect('http://172.31.147.7:3000');            
+            var socket = io.connect('http://172.31.147.7:3000');
             var canvas = document.getElementById('mycanvas');
             var cordShow = document.getElementById('cord');
+            var sizes = document.getElementById('sizes');
+            var colors = document.getElementById('colors');
             var md = false;
 
             if (canvas.getContext) {
                 var ctx = canvas.getContext("2d");
                 var cW = ctx.canvas.width, cH = ctx.canvas.height;
-                var radius = 10;
+                var color = '#000000';
+                var size = '1';
+                colors.addEventListener("change", function () {
+                    color = colors.options[colors.selectedIndex].value;
+                })
 
-                ctx.lineWidth = radius * 2;
+                sizes.addEventListener("change", function () {
+                    size = sizes.options[sizes.selectedIndex].value;
+                })
+
+
 
                 var drawNew = function (data) {
                     ctx.canvas.style.cursor = "pointer";
+                    ctx.lineWidth = data.S * 2;
 
                     if (md == true) {
+                        ctx.fillStyle = data.C;
+                        ctx.strokeStyle = data.C;
                         ctx.lineTo(data.X, data.Y);
                         ctx.stroke();
                         ctx.beginPath();
-                        ctx.arc(data.X, data.Y, radius, 0, Math.PI * 2, false);
+                        ctx.arc(data.X, data.Y, data.S, 0, Math.PI * 2, false);
                         ctx.fill();
                         ctx.beginPath();
                         ctx.moveTo(data.X, data.Y);
                     }
                 }
 
-                socket.on('drag',function(data){
+                socket.on('drag', function (data) {
                     md = true;
                     ctx.canvas.style.cursor = "pointer";
                     drawNew(data);
                 });
 
-                socket.on('drop',function(data){
+                socket.on('drop', function () {
                     md = false;
                     ctx.canvas.style.cursor = "default";
                     ctx.beginPath();
                 });
 
-                socket.on('move',function(data){
+                socket.on('move', function (data) {
                     drawNew(data);
                 });
 
                 //drag
-                ctx.canvas.addEventListener('mousedown', function(){
-                    
+                ctx.canvas.addEventListener('mousedown', function () {
+
                     var mousex = event.clientX - ctx.canvas.offsetLeft;
                     var mousey = event.clientY - ctx.canvas.offsetTop;
-                    socket.emit('get down',mousex,mousey);
+                    socket.emit('get down', mousex, mousey, color, size);
                 });
                 //drop
-                ctx.canvas.addEventListener('mouseup', function(){
-                    
-                    var mousex = event.clientX - ctx.canvas.offsetLeft;
-                    var mousey = event.clientY - ctx.canvas.offsetTop;
-                    socket.emit('get up',mousex,mousey);
+                ctx.canvas.addEventListener('mouseup', function () {
+                    socket.emit('get up');
                 });
                 //drawnew
-                ctx.canvas.addEventListener('mousemove', function(){
+                ctx.canvas.addEventListener('mousemove', function () {
                     var mousex = event.clientX - ctx.canvas.offsetLeft;
                     var mousey = event.clientY - ctx.canvas.offsetTop;
                     cord.innerHTML = mousex + " | " + mousey;
-                    socket.emit('get move',mousex,mousey);
+                    socket.emit('get move', mousex, mousey, color, size);
                 });
 
             }
             else {
                 alert('You need Safari or Firefox 1.5+ to see this demo.');
             }
-       
-       })
-            
+
+        })
     </script>
 </head>
 
 <body>
+    <select id="colors">
+        <option value = "#000000">Black</option>
+        <option value = "#0000FF">Blue</option>
+        <option value = "#A52A2A">Red</option>
+        <option value = "#7FFF00">Chartreuse</option>
+        <option value = "#6495ED">CornflowerBlue</option>
+        <option value = "#FFDEAD">Navojato White</option>
+    </select>
+    <select id="sizes">
+        <option value = "1">1</option>
+        <option value = "2">2</option>
+        <option value = "4">4</option>
+        <option value = "8">8</option>
+        <option value = "16">16</option>
+        <option value = "32">32</option>
+    </select>
     <canvas id="mycanvas" width="700" height="350"></canvas>
     <div id="btn_cont">
         <h2 id='cord'>0 | 0</h2>
